==> betaflight/betaflight/src/main/drivers/stm32/pwm_output_dshot_hal_hal.c <==
#include <stdbool.h>
#include <stdint.h>
#include <math.h>
#include <string.h>
#include "platform.h"
#include "drivers/dma_reqmap.h"
#include "drivers/io.h"
#include "timer.h"
#include "pwm_output.h"
#include "drivers/dshot.h"
#include "drivers/dshot_dpwm.h"
#include "drivers/dshot_command.h"
#include "drivers/nvic.h"
#include "dma.h"
#include "rcc.h"
#include "pg/timerup.h"

void pwmCompleteDshotMotorUpdate(void)
{
    // If there is a dshot command loaded up, time it correctly with motor update

    if (!dshotCommandQueueEmpty() && !dshotCommandOutputIsEnabled(dshotPwmDevice.count)) {
        return;
    }

#ifdef USE_DSHOT_DMAR
    if (useBurstDshot) {
        for (int i = 0; i < dmaMotorTimerCount; i++) {
            motorDmaTimer_t *burstDmaTimer = &dmaMotorTimers[i];

            // Transfer CCR1 through CCR4 for each burst
            pwmBurstDMAStart(&burstDmaTimer->timHandle,
                    TIM_DMABASE_CCR1, TIM_DMA_UPDATE, TIM_DMABURSTLENGTH_4TRANSFERS,
                    (uint32_t*)burstDmaTimer->dmaBurstBuffer, burstDmaTimer->dmaBurstLength);
        }
    } else
#endif
    {
        // XXX Empty for non-burst?
    }
}

FAST_IRQ_HANDLER static void motor_DMA_IRQHandler(dmaChannelDescriptor_t* descriptor)
{
    if (DMA_GET_FLAG_STATUS(descriptor, DMA_IT_TCIF)) {

#ifdef USE_DSHOT_DMAR
        if (useBurstDshot) {
            motorDmaTimer_t *burstDmaTimer = &dmaMotorTimers[descriptor->userParam];

            HAL_TIM_DMABurst_WriteStop(&burstDmaTimer->timHandle, TIM_DMA_UPDATE);
            HAL_DMA_IRQHandler(&burstDmaTimer->hdma_tim);
        } else
#endif
        {
            motorDmaOutput_t * const motor = &dmaMotors[descriptor->userParam];

            pwmChannelDMAStop(&motor->TimHandle,motor->timerHardware->channel);
            HAL_DMA_IRQHandler(motor->TimHandle.hdma[motor->timerDmaIndex]);
        }

        DMA_CLEAR_FLAG(descriptor, DMA_IT_TCIF);
    }
}

bool pwmDshotMotorHardwareConfig(const timerHardware_t *timerHardware, uint8_t motorIndex, uint8_t reorderedMotorIndex, motorPwmProtocolTypes_e pwmProtocolType, uint8_t output)
{
    dmaResource_t *dmaRef = NULL;
    uint32_t dmaChannel;

#ifdef USE_DMA_SPEC
    const dmaChannelSpec_t *dmaSpec = dmaGetChannelSpecByTimer(timerHardware);

    if (dmaSpec) {
        dmaRef = dmaSpec->ref;
        dmaChannel = dmaSpec->channel;
    }
#else
    dmaRef = timerHardware->dmaRef;
    dmaChannel = timerHardware->dmaChannel;
#endif

#ifdef USE_DSHOT_DMAR
    if (useBurstDshot) {
#ifdef USE_DMA_SPEC
        uint8_t timnum = timerGetTIMNumber(timerHardware->tim);
        dmaoptValue_t dmaopt = timerUpConfig(timnum - 1)->dmaopt;
        const dmaChannelSpec_t *dmaChannelSpec = dmaGetChannelSpecByPeripheral(DMA_PERIPH_TIMUP, timnum - 1, dmaopt);
        dmaRef = dmaChannelSpec->ref;
        dmaChannel = dmaChannelSpec->channel;
#else
        dmaRef = timerHardware->dmaTimUPRef;
        dmaChannel = timerHardware->dmaTimUPChannel;
#endif
    }
#endif

    if (dmaRef == NULL) {
        return false;
    }

    dmaIdentifier_e dmaIdentifier = dmaGetIdentifier(dmaRef);

    bool dmaIsConfigured = false;
#ifdef USE_DSHOT_DMAR
    if (useBurstDshot) {
        const resourceOwner_t *owner = dmaGetOwner(dmaIdentifier);
        if (owner->owner == OWNER_TIMUP && owner->resourceIndex == timerGetTIMNumber(timerHardware->tim)) {
            dmaIsConfigured = true;
        } else if (!dmaAllocate(dmaIdentifier, OWNER_TIMUP, timerGetTIMNumber(timerHardware->tim))) {
            return false;
        }
    } else
#endif
    {
        if (!dmaAllocate(dmaIdentifier, OWNER_MOTOR, RESOURCE_INDEX(reorderedMotorIndex))) {
            return false;
        }
    }

    motorDmaOutput_t * const motor = &dmaMotors[motorIndex];
    motor->timerHardware = timerHardware;

    TIM_TypeDef *timer = timerHardware->tim; // "timer" is confusing; "tim"?
    const IO_t motorIO = IOGetByTag(timerHardware->tag);
    uint8_t pupMode = (output & TIMER_OUTPUT_INVERTED) ? GPIO_PULLDOWN : GPIO_PULLUP;
#ifdef USE_DSHOT_TELEMETRY
    if (useDshotTelemetry) {
        output ^= TIMER_OUTPUT_INVERTED;
    }
#endif

    motor->iocfg = IO_CONFIG(GPIO_MODE_AF_PP, GPIO_SPEED_FREQ_LOW, pupMode);
    const uint8_t timerIndex = getTimerIndex(timer);
    const bool configureTimer = (timerIndex == dmaMotorTimerCount - 1);

    IOInit(motorIO, OWNER_MOTOR, RESOURCE_INDEX(reorderedMotorIndex));
    IOConfigGPIOAF(motorIO, motor->iocfg, timerHardware->alternateFunction);

    // Configure time base

    if (configureTimer) {
        RCC_ClockCmd(timerRCC(timer), ENABLE);

        motor->TimHandle.Instance = timerHardware->tim; // timer
        motor->TimHandle.Init.Prescaler = (uint16_t)(lrintf((float) timerClock(timer) / getDshotHz(pwmProtocolType) + 0.01f) - 1);
        motor->TimHandle.Init.Period = pwmProtocolType == PWM_TYPE_PROSHOT1000 ? MOTOR_NIBBLE_LENGTH_PROSHOT : MOTOR_BITLENGTH;
        motor->TimHandle.Init.RepetitionCounter = 0;
        motor->TimHandle.Init.ClockDivision = TIM_CLOCKDIVISION_DIV1;
        motor->TimHandle.Init.CounterMode = TIM_COUNTERMODE_UP;
        motor->TimHandle.Init.AutoReloadPreload = TIM_AUTORELOAD_PRELOAD_DISABLE;

        result = HAL_TIM_PWM_Init(&motor->TimHandle);

        if (result != HAL_OK) {
            /* Initialization Error */
            return false;
        }
    }

/*
From LL version
chan oinv IDLE NIDLE POL  NPOL
N    I    -    Low   -    Low
N    -    -    Low   -    High
P    I    High -     Low  -
P    -    High -     High -
*/

    /* PWM mode 1 configuration */

    TIM_OC_InitTypeDef TIM_OCInitStructure;
    TIM_OCInitStructure.OCMode = TIM_OCMODE_PWM1;

    if (output & TIMER_OUTPUT_N_CHANNEL) {
        TIM_OCInitStructure.OCIdleState = TIM_OCIDLESTATE_RESET;
        TIM_OCInitStructure.OCPolarity = (output & TIMER_OUTPUT_INVERTED) ? TIM_OCPOLARITY_HIGH : TIM_OCPOLARITY_LOW;
        TIM_OCInitStructure.OCNIdleState = TIM_OCNIDLESTATE_RESET;
        TIM_OCInitStructure.OCNPolarity = (output & TIMER_OUTPUT_INVERTED) ? TIM_OCNPOLARITY_HIGH : TIM_OCNPOLARITY_LOW;
    } else {
        TIM_OCInitStructure.OCIdleState = TIM_OCIDLESTATE_SET;
        TIM_OCInitStructure.OCPolarity = (output & TIMER_OUTPUT_INVERTED) ? TIM_OCPOLARITY_LOW : TIM_OCPOLARITY_HIGH;
        TIM_OCInitStructure.OCNIdleState = TIM_OCNIDLESTATE_SET;
        TIM_OCInitStructure.OCNPolarity = (output & TIMER_OUTPUT_INVERTED) ? TIM_OCNPOLARITY_LOW : TIM_OCNPOLARITY_HIGH;
    }
    TIM_OCInitStructure.OCFastMode = TIM_OCFAST_DISABLE;
    TIM_OCInitStructure.Pulse = 0;

    result = HAL_TIM_PWM_ConfigChannel(&motor->TimHandle, &TIM_OCInitStructure, motor->timerHardware->channel);

    if (result != HAL_OK) {
        /* Configuration Error */
        return false;
    }

    // DMA setup

    motor->timer = &dmaMotorTimers[timerIndex];

#ifdef USE_DSHOT_DMAR
    if (useBurstDshot) {
        motor->timer->dmaBurstRef = dmaRef;

        if (!configureTimer) {
            motor->configured = true;
            return false;
        }
    } else
#endif
    {
        motor->timerDmaSource = timerDmaSource(timerHardware->channel);
        motor->timer->timerDmaSources |= motor->timerDmaSource;
        motor->timerDmaIndex = timerDmaIndex(timerHardware->channel);
    }

    if (!dmaIsConfigured) {
        dmaEnable(dmaIdentifier);
#ifdef USE_DSHOT_DMAR
        if (useBurstDshot) {
            dmaSetHandler(dmaIdentifier, motor_DMA_IRQHandler, NVIC_PRIO_DSHOT_DMA, timerIndex);
        } else
#endif
        {
            dmaSetHandler(dmaIdentifier, motor_DMA_IRQHandler, NVIC_PRIO_DSHOT_DMA, motorIndex);
        }
    }

#ifdef USE_DSHOT_DMAR
    if (useBurstDshot) {
        motor->timer->hdma_tim.Init.Direction = DMA_MEMORY_TO_PERIPH;
        motor->timer->hdma_tim.Init.PeriphInc = DMA_PINC_DISABLE;
        motor->timer->hdma_tim.Init.MemInc = DMA_MINC_ENABLE;
        motor->timer->hdma_tim.Init.PeriphDataAlignment = DMA_PDATAALIGN_WORD ;
        motor->timer->hdma_tim.Init.MemDataAlignment = DMA_MDATAALIGN_WORD ;
        motor->timer->hdma_tim.Init.Mode = DMA_NORMAL;
        motor->timer->hdma_tim.Init.Priority = DMA_PRIORITY_HIGH;
#if !defined(STM32G4)
        motor->timer->hdma_tim.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
        motor->timer->hdma_tim.Init.PeriphBurst = DMA_PBURST_SINGLE;
        motor->timer->hdma_tim.Init.MemBurst = DMA_MBURST_SINGLE;
        motor->timer->hdma_tim.Init.FIFOThreshold = DMA_FIFO_THRESHOLD_FULL;
#endif

        motor->timer->dmaBurstBuffer = &dshotBurstDmaBuffer[timerIndex][0];
        motor->timer->timHandle = motor->TimHandle;
        memset(motor->timer->dmaBurstBuffer, 0, DSHOT_DMA_BUFFER_SIZE * 4 * sizeof(uint32_t));

        /* Set hdma_tim instance */
        motor->timer->hdma_tim.Instance = (DMA_ARCH_TYPE *)dmaRef;
        motor->timer->hdma_tim.Init.Request = dmaChannel;

        /* Link hdma_tim to hdma[TIM_DMA_ID_UPDATE] (update) */
        __HAL_LINKDMA(&motor->timer->timHandle, hdma[TIM_DMA_ID_UPDATE], motor->timer->hdma_tim);

        if (!dmaIsConfigured) {
            /* Initialize TIMx DMA handle */
            result = HAL_DMA_Init(motor->timer->timHandle.hdma[TIM_DMA_ID_UPDATE]);
        } else {
            result = HAL_OK;
        }
    } else
#endif
    {
        motor->hdma_tim.Init.Direction = DMA_MEMORY_TO_PERIPH;
        motor->hdma_tim.Init.PeriphInc = DMA_PINC_DISABLE;
        motor->hdma_tim.Init.MemInc = DMA_MINC_ENABLE;
        motor->hdma_tim.Init.PeriphDataAlignment = DMA_PDATAALIGN_WORD ;
        motor->hdma_tim.Init.MemDataAlignment = DMA_MDATAALIGN_WORD ;
        motor->hdma_tim.Init.Mode = DMA_NORMAL;
        motor->hdma_tim.Init.Priority = DMA_PRIORITY_HIGH;
#if !defined(STM32G4)
        motor->hdma_tim.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
        motor->hdma_tim.Init.PeriphBurst = DMA_PBURST_SINGLE;
        motor->hdma_tim.Init.MemBurst = DMA_MBURST_SINGLE;
        motor->hdma_tim.Init.FIFOThreshold = DMA_FIFO_THRESHOLD_FULL;
#endif

        motor->dmaBuffer = &dshotDmaBuffer[motorIndex][0];
        motor->dmaBuffer[DSHOT_DMA_BUFFER_SIZE-2] = 0; // XXX Is this necessary? -> probably.
        motor->dmaBuffer[DSHOT_DMA_BUFFER_SIZE-1] = 0; // XXX Is this necessary?

        motor->hdma_tim.Instance = (DMA_ARCH_TYPE *)dmaRef;
        motor->hdma_tim.Init.Request = dmaChannel;

        /* Link hdma_tim to hdma[x] (channelx) */
        __HAL_LINKDMA(&motor->TimHandle, hdma[motor->timerDmaIndex], motor->hdma_tim);

        /* Initialize TIMx DMA handle */
        result = HAL_DMA_Init(motor->TimHandle.hdma[motor->timerDmaIndex]);

    }

    if (result != HAL_OK) {
        /* Initialization Error */
        return false;
    }

    // Start the timer channel now.
    // Enabling/disabling DMA request can restart a new cycle without PWM start/stop.

    if (motor->timerHardware->output & TIMER_OUTPUT_N_CHANNEL) {
        result = HAL_TIMEx_PWMN_Start(&motor->TimHandle, motor->timerHardware->channel);
    } else {
        result = HAL_TIM_PWM_Start(&motor->TimHandle, motor->timerHardware->channel);
    }

    if (result != HAL_OK) {
        /* Starting PWM generation Error */
        return false;
    }

    motor->configured = true;

    return true;
}
